# django-data-watcher

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prospector.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml  runtests.py
.devcontainer/: Dockerfile  devcontainer-example.json
.github/workflows/: pypi_publisher.yml  pypi_test_publisher.yml  run_tests_and_build.yml  tester.yml
django-watcher/: decorator.py  mixins.py
django_watcher/: __init__.py  abstract_watcher.py  decorator.py  decorators.py  mixins.py  watcher.py
django_watcher/decorators/: __init__.py  helpers.py  model.py  queryset.py  querytools.py
docs/: conf.py  index.rst
docs/guide/: install.rst  tutorial.rst  usage.rst  usage.txt
requirements/: base.txt  dev.in  dev.txt
scripts/: check_venv.sh
tests/: conftest.py  managers.py  models.py  test_abstract_watcher.py  test_decorators.py  test_mixins.py  watchers.py
tests/migrations/: 0001_initial.py
tests/tests/: helpers.py  test_abstract_watcher.py  test_decorators.py  test_mixins.py  test_relations.py
