[tool.poetry]
name = "django-watcher"
version = "0.1.0"
description = "Django Data Watcher is a library that will make easier to create/mantain side-effects of data operations in your django models."
authors = ["Vinta Software"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.8"
Django = "^3.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
pre-commit = "^2.15.0"
prospector = "1.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
