[tool.poetry]
name = "django-watcher"
version = "1.2.0"
description = "Django Data Watcher is a library that will make easier to create/mantain side-effects of data operations in your django models."
authors = ["Vinta Serviços e Soluções Tecnológicas LTDA"]
license = "MIT"
documentation = "https://django-data-watcher.readthedocs.io/"
keywords = ["django", "orm", "optimization"]
classifiers = [
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.6.8"
Django = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
pre-commit = "^2.15.0"
prospector = "1.2"
pytest = "^6.2.5"
Faker = "^9.9.0"
pytest-django = "^4.5.1"
pytest-cov = "^3.0.0"
django-stubs = "^1.9.0"
Sphinx = "^4.5.0"

[tool.pytest.ini_options]
addopts = "--tb=short --strict-markers -ra --reuse-db --nomigrations"

[tool.coverage.run]
source = ["."]
include = ["django_watcher/*"]

[tool.coverage.report]
include = ["django_watcher/*"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.conftest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
